--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  
   min-height: 10vh;
 
   display: flex;
@@ -22,7 +22,8 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #fff;
+  text-shadow: 2px 2px 5px rgb(158, 98, 255);
 }
 
 .App-link {
