--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  --bg-color: rgba(150, 150, 150, 1);
+  --bg-color: #ffffff42;
 
   /* Border Colors are all transparent colors. These will tint or shade the background color of the square. */
   --border-left-color: rgba(255, 255, 255, 0.20);
@@ -26,6 +26,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background: rgb(105,105,246);
+  background: linear-gradient(90deg, rgba(105,105,246,1) 0%, rgba(125,250,250,1) 100%);
 }
 
 code {
@@ -35,6 +38,9 @@ code {
 
 
 .App {
+  background-color: var(--bg-color);
+  border-radius: 10px;
+
   --col-side: calc(var(--tile-size) * 4);
   --col-center: calc(var(--tile-size) * 8);
   --grid-height: calc(var(--tile-size) * 8);
@@ -59,12 +65,12 @@ code {
   grid-area: h;
 }
 
-.fill {
+.buttons {
   grid-area: b;
-  width: 100px;
   align-self: start;
+  display: flex;
+  justify-content: space-around;
 }
-
 
 .picker {
   grid-area: r;
@@ -78,6 +84,9 @@ code {
   grid-gap: 1px;
   align-self: flex-start;
   grid-area: c;
+  background-color: var(--bg-color);
+  border: solid var(--bg-color);
+
 }
 
 .Grid > div {
