--- a/src/index.css
+++ b/src/index.css
@@ -72,6 +72,33 @@ code {
   justify-content: space-around;
 }
 
+button.fill-button, button.reset-button {
+  display:inline-block;
+  padding:0.3em 1.2em;
+  margin:0 0.1em 0.1em 0;
+  border:0.16em solid rgba(255,255,255,0);
+  border-radius:.5em;
+  box-sizing: border-box;
+  font-weight:300;
+  color:#FFFFFF;
+  text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+  text-align:center;
+  transition: all 0.2s;
+  cursor: pointer;
+}
+
+button.fill-button {
+  background-color:#9a4ef1d8
+}
+
+button.reset-button {
+  background-color: #f14ebdd2;
+}
+
+button.fill-button:hover,button.reset-button:hover {
+  border-color: var(--bg-color);
+}
+
 .picker {
   grid-area: r;
   display: flex;
