--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,8 @@ code {
   --grid-height: calc(var(--tile-size) * 10);
 
   width: calc(var(--tile-size) * (4 + 1 + 10 + 1 + 4));
-  margin: 10px 276px;
+  margin: auto;
+  margin-top: 10px;
   display: grid;
 
   grid-gap: 40px;
