--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,7 @@ code {
 .App {
   background-color: var(--bg-color);
   border-radius: 10px;
+  /* box-shadow: ; */
 
   --col-side: calc(var(--tile-size) * 4);
   --col-center: calc((var(--tile-size) * 10) + 30px);
@@ -38,6 +39,7 @@ code {
   width: calc(var(--tile-size) * (4 + 1 + 10 + 1 + 4));
   margin: auto;
   margin-top: 30px;
+
   display: grid;
 
   grid-gap: 40px;
