--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@
   --cols: 10;
   --rows: 10;
   --tile-size: 45px;
-  --border-width: 2px;
+  --border-r: 5px;
+
 }
 
 body {
@@ -29,8 +30,8 @@ code {
 
 .App {
   background-color: var(--bg-color);
-  border-radius: 10px;
-  /* box-shadow: ; */
+  border-radius: calc(var(--border-r) * 2 );
+  box-shadow: 5px 5px 10px #00000009, -4px -1px 10px #0000001e;
 
   --col-side: calc(var(--tile-size) * 4);
   --col-center: calc((var(--tile-size) * 10) + 30px);
@@ -39,6 +40,7 @@ code {
   width: calc(var(--tile-size) * (4 + 1 + 10 + 1 + 4));
   margin: auto;
   margin-top: 30px;
+  margin-bottom: 30px;
 
   display: grid;
 
@@ -84,6 +86,7 @@ button.fill-button, button.reset-button {
   height: 50px;
   width: 100px;
   font-size: 1.2rem;
+  border-color: var(--bg-color);
 }
 
 button.fill-button {
@@ -94,8 +97,12 @@ button.reset-button {
   background-color: #f14ebdd2;
 }
 
-button.fill-button:hover,button.reset-button:hover {
-  border-color: var(--bg-color);
+button.fill-button:hover {
+  background-color: #8242cad8
+}
+
+button.reset-button:hover {
+  background-color: #d444a7d2;
 }
 
 /* Color Picker */
@@ -110,8 +117,10 @@ button.fill-button:hover,button.reset-button:hover {
 .picker > input {
   width: 40px;
   height: 300px;
+  background-color: var(--bg-color);
   border-color: var(--bg-color);
-  border-radius: 5px;
+  border-radius: var(--border-r);
+  cursor: crosshair;
 }
 
 /* Grid */
@@ -124,7 +133,7 @@ button.fill-button:hover,button.reset-button:hover {
   grid-area: c;
   background-color: var(--bg-color);
   border: solid 10px var(--bg-color);
-
+  border-radius: var(--border-r);
 }
 
 .Grid > div {
