--- a/src/index.css
+++ b/src/index.css
@@ -84,7 +84,6 @@ h1.App-title {
 button.fill-button, button.reset-button, button.save-btn {
   display:inline-block;
   padding:0.3em 1.2em;
-  
   border:0.16em solid rgba(255,255,255,0);
   border-radius: 1em;
   box-sizing: border-box;
@@ -137,6 +136,7 @@ button.save-btn:hover {
   justify-content: flex-start;
   align-items: center;
   margin-top: 37px;
+  margin-left: 13px;
 }
 
 .picker > input {
