--- a/src/index.css
+++ b/src/index.css
@@ -83,7 +83,6 @@ h1.App-title {
 
 button.fill-button, button.reset-button, button.save-btn {
   display:inline-block;
-  padding:0.3em 1.2em;
   border:0.16em solid rgba(255,255,255,0);
   border-radius: 1em;
   box-sizing: border-box;
@@ -101,10 +100,12 @@ button.fill-button, button.reset-button, button.save-btn {
 
 button.fill-button, button.reset-button {
   margin:1.5em 1em 1em 1.5em;
+  padding:0.3em 1.2em;
 }
 
 button.save-btn {
   background-color: #4ef1b38f;
+  
 }
 
 button.fill-button {
@@ -156,7 +157,7 @@ button.save-btn:hover {
   grid-gap: 1px;
   align-self: flex-start;
   grid-area: c;
-  /* background-color: var(--bg-color); */
+  /* background-color: rgba(255, 255, 255, 0.63); */
   border: solid 10px var(--bg-color);
   border-radius: var(--border-r);
 }
@@ -164,6 +165,10 @@ button.save-btn:hover {
 .Grid > div {
   width: var(--tile-size);
   height: var(--tile-size);
+}
+
+.Grid > div:hover {
+  background-color: var(--bg-color);
 }
 
 
